# syllabus-scraping

./: Dockerfile  README.md  compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  dispatch.yml  scraping.yml
data/: 2022table.json  2023table.json  2024table.json
syllabus/: __init__.py  convert.py  dow_period.py  parse.py  scrape.py  utility.py
tests/: test_syllabus_scraping.py
